--- a/soc-frontend/package.json
+++ b/soc-frontend/package.json
@@ -11,15 +11,19 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'"
   },
   "dependencies": {
+    "@vueuse/core": "^10.5.0",
+    "flowbite": "^1.8.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/test-utils": "^2.4.1",
+    "autoprefixer": "^10.4.16",
     "cypress": "^13.2.0",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.31",
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9",
